Add add-opens in createExe and shadowJar tasks